# ft5009-assignment1

./: .env.example  README.md  pyproject.toml
data/: scraped_content.txt  sp500_constituents.csv  sp500_constituents.parquet  sp_500_constituents.csv
notebook/: end_to_end.ipynb
src/: config.py  util.py
src/analysis/: benfords_law.py
src/data_loaders/: __init__.py  wiki_sp500_scraper.py  yf_loader.py
src/data_processor/: base_processor.py  sp500_processor.py
src/utils/: config.py  data_utils.py  llm_response_schema.py  plotting.py  schemas.py  scraper.py
