[project]
name = "ft5009-assignment1"
version = "0.1.0"
description = ""
authors = [
    {name = "whanyu1212",email = "whanyu1212@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "firecrawl-py (>=3.3.3,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "litellm (>=1.76.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-mock (>=3.14.1,<4.0.0)",
    "google-genai (>=1.31.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false